2008-07-08 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/stdlib/Sys/run.py, tests/hop.exscript, 
	tests/subtemplate.exscript, tests/ls.exscript, exscript, 
	src/Exscript/Exscript.py, src/Exscript/Interpreter/Scope.py, 
	src/Exscript/Interpreter/stdlib/Connection/auto_authorize.py, 
	src/Exscript/Interpreter/stdlib/Sys/__init__.py, 
	src/Exscript/TerminalActions/Authenticate.py, 
	src/Exscript/TerminalActions/CommandScript.py: It is now possible to 
	start a new Job immediately even while the engine is already running and 
	after the queue has been filled. Added new stdlib function run() to 
	allow for doing just that from within an Exscript. Added sample Exscripts 
	that make use of the new functionality.

2008-07-02 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/*.py: Extremely improved the parser support for 
	multi-line code snippets included between "{}" brackets. This also relaxes
	whitespace rules in some places.
	* test/whitespace.exscript: New test.
	* exscript: Cleanups.

2008-07-01 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/Code.py, src/Exscript/Interpreter/Term.py: Add
	support for octal numbers using the 01234 format.
	* src/Exscript/Interpreter/stdlib/File/*.py: Add chmod() function, cleanups.

2008-06-30 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/Code.py, src/Exscript/Interpreter/Term.py: Add
	support for hex numbers by using the 0xABCD format.
	* src/Exscript/Interpreter/stdlib/Connection/auto_authorize.py: Fix a
	deadlock.
	* src/Exscript/Interpreter/stdlib/Connection/exec.py: Fixed (did not work at
	all).

2008-06-29 Samuel Abels <http://debain.org>

	* Makefile: Add an installer that pulls dependencies from the repository.
	* src/Exscript/Interpreter/Program.py,
	src/Exscript/TerminalActions/CommandScript.py: Got rid of useless reference 
	to Trackable.
	* src/Exscript/Interpreter/Trackable.py: Removed useless file.

2008-06-28 Samuel Abels <http://debain.org>
